@@ -1,3 +1,9 @@
+2006-04-01  Vesa Jaaskelainen  <chaac@nic.fi>
+
+	* normal/main.c (grub_normal_menu_addentry): Fixed menu size
+	calculation.
+	(read_config_file): Made it to close file before returning.
+
 2006-03-31  Vesa Jaaskelainen  <chaac@nic.fi>
 
 	* DISTLIST: Added include/grub/i386/pc/vbeblit.h,
